fix: page-width sizing on smaller screens

--- a/src/components/content-layout.scss
+++ b/src/components/content-layout.scss
@@ -47,6 +47,12 @@
   padding: 0px;
 }
 
+.collapsable-nav-row .main-content-container.full-width {
+  float: none;
+  width: calc(100% - 176px);
+  padding: 0px;
+}
+
 .collapsable-nav-row .sidebar {
   width: 260px;
   flex-shrink: 0;
@@ -91,12 +97,15 @@
 
 /**
   MEDIUM SCREENS AND DOWN
-  This is where the left-hand sidebar disappears, so the
-  grid changes back into a direct vertical display.
+  This is where the page draws out to a full-width, vertical
+  colun layout for mobile displays.
 */
 @media screen and (max-width: 769px) {
-  .campaign-public-layout .collapsable-nav-row {
+  .collapsable-nav-row .main-content-container,
+  .collapsable-nav-row .main-content-container.full-width,
+  .collapsable-nav-row .sidebar {
     display: block;
-    grid-template-areas: none;
+    width: 100%;
+    margin: 0px;
   }
 }
